# al-ke-la-prediccion_arrestos

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
notebooks/: 01.Descarga_de_datos.ipynb  02.Preprocesamiento_de_datos.ipynb  03.Analisis exploratorio.ipynb  04.Modelos.ipynb
notebooks/data/: consolidado.csv  df_arrest.csv  df_copy_18.csv
